--- a/css/page_style.css
+++ b/css/page_style.css
@@ -25,57 +25,78 @@ img {
 main {
     margin-top: 10px; /* Adjust margin-top to create space below the fixed menu */
     display: flex;
-    position: relative;
     justify-content: center;
     padding-top: 20px;
+    padding-left: 5%;
     /*background-color: aqua;*/
 }
 
-.content-grid {
+.main-content-block {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     -webkit-box-pack: center;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 5%;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    padding-left: 2%;
+    padding-right: 2%;
+    overflow: auto;
+    /*background-color: darkgrey;*/
+}
+
+.sub-content-block {
+    display: grid;
 }
 
 .left-side-container {
     display: block;
-    width: 800px;
+    /*width: 800px;*/
+    width: auto;
+    max-width: 800px;
     text-wrap: pretty;
     overflow-wrap: break-word;
+    overflow: auto;
     /*background-color: rgb(183, 241, 255);*/
 }
 
 .right-side-container {
+    display: block;
     top: 20px;
     float: right;
     margin-left: 10px; 
-    width: 300px;
+    width: fit-content;
+    padding-left: 2%;
+    padding-right: 2%;
     /*background-color: rgb(199, 199, 199);*/
 }
 
 .toc-content {
     position: -webkit-sticky; /* Safari */
     position: sticky;
+    height: 50vh;
     top: 10%;
     margin-top: 100px;
-    background-color: rgb(203, 162, 209);
+    background-color: aqua;
     border-radius: 20px;
     padding: 10px;
-    max-height: calc(100vh - 40px); /* Adjust based on your layout */
+    width: 300px;
+    height: fit-content;
+    white-space: nowrap;
 }
 
-@media (max-width: 1150px) {
-    .content-grid
-    .right-side-container {
-        display: none;
-    }
-    
-    .left-side-container {
+@media (max-width: 1150px) {  
+    /*.left-side-container {
         width: auto;
         max-width: 800px;
+    }*/
+}
+
+@media (max-width: 1000px) {
+    main {
+        padding-left: 0%;
+        padding-right: 0%;
+    }
+    .toc-content {
+        display: none;
     }
 }
